update links and awards

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author:
 
   # Academic websites
   arxiv            :
-  googlescholar    : "https://scholar.google.com/citations?user=2MhZ6YkAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=Mk-thxsAAAAJ&hl=en"
   impactstory      :
   orcid            :
   pubmed           :
