--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "Shicheng Fan"# TODO: your LinkedIn username
+  linkedin         : "shicheng-fan-072935308"
   mastodon         :
   medium           :
   pinterest        :
